# MGC_Project

./: README.md  pyproject.toml  requirements.txt
cluster_data_ingestion/: data_scraper.py  excel_write_config.py  excel_writer.py  gene_files_writer.py  main_ingestion.py  scraper_config.py  uniprot_ingestion.py
general_data/: mgc_fungi_clusters.xlsx  mgc_plant_clusters.xlsx
general_data/fungi_gene_data/: BGC0000004.xlsx  BGC0000006.xlsx  BGC0000007.xlsx  BGC0000008.xlsx  BGC0000009.xlsx  BGC0000010.xlsx  BGC0000011.xlsx  BGC0000012.xlsx  BGC0000013.xlsx  BGC0000022.xlsx  BGC0000030.xlsx  BGC0000037.xlsx  BGC0000039.xlsx  BGC0000045.xlsx  BGC0000046.xlsx  BGC0000048.xlsx  BGC0000057.xlsx  BGC0000062.xlsx  BGC0000063.xlsx  BGC0000064.xlsx  BGC0000070.xlsx  BGC0000076.xlsx  BGC0000077.xlsx  BGC0000088.xlsx  BGC0000098.xlsx  BGC0000099.xlsx  BGC0000104.xlsx  BGC0000107.xlsx  BGC0000120.xlsx  BGC0000121.xlsx  BGC0000129.xlsx  BGC0000134.xlsx  BGC0000154.xlsx  BGC0000156.xlsx  BGC0000168.xlsx  BGC0000170.xlsx  BGC0000292.xlsx  BGC0000293.xlsx  BGC0000304.xlsx  BGC0000307.xlsx  (+303 more)
general_data/gene_data/: BGC0000669.xlsx  BGC0000670.xlsx  BGC0000671.xlsx  BGC0000672.xlsx  BGC0000810.xlsx  BGC0001313.xlsx  BGC0001314.xlsx  BGC0001315.xlsx  BGC0001316.xlsx  BGC0001317.xlsx  BGC0001318.xlsx  BGC0001324.xlsx  BGC0001325.xlsx  BGC0001756.xlsx  BGC0001799.xlsx  BGC0001997.xlsx  BGC0002389.xlsx  BGC0002390.xlsx  BGC0002391.xlsx  BGC0002392.xlsx  BGC0002393.xlsx  BGC0002394.xlsx  BGC0002395.xlsx  BGC0002404.xlsx  BGC0002405.xlsx  BGC0002406.xlsx  BGC0002622.xlsx  BGC0002721.xlsx  (+3 more)
(+2779 files in other folders)
